[package]
name = "anyhow-source-location"
version = "0.2.1"
edition = "2021"
description = "Two simple macros that make it easy to add the source location to the anyhow context errors."
license-file = "LICENSE"
repository = "https://github.com/work-spaces/anyhow-source-location"



[dependencies]
anyhow = "1"
